2008-11-24  Glenn Wilson  <gwilson@chromium.org>

Reviewed by Darin Adler.

        http://bugs.webkit.org/show_bug.cgi?id=18703
        "Changing the 'size' property on a text input does not affect its length"

        Text fields would not repaint themselves after having their "size"
        attributes modified.  This fix tells the object to recalculate its
        width and repaint itself when its "size" attribute is parsed.

        Test: fast/js/text-field-resize.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::parseMappedAttribute):



Canonical link: https://commits.webkit.org/30931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38722 268f45cc-cd09-0410-ab3c-d52691b4dbfc